--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 
 <body>
+    <form id="todo-form">
+        <label for="title" >Nova tarefa</label>
+        <input id="title" name="title" required />
+        <button type="submit">Adicionar</button>
+</form>
 
+<ul id="todo-list">
+    
+</ul>
 </body>
 
 </html>
