--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 
 <body>
     <form id="todo-form">
-        <label for="title" >Nova tarefa</label>
+        <label for="title">Nova tarefa</label>
         <input id="title" name="title" required />
         <button type="submit">Adicionar</button>
-</form>
+    </form>
 
-<ul id="todo-list">
-    
-</ul>
+    <ul id="todo-list">
+
+    </ul>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
