Criado a estilização com css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css">
     <title>Lista de tarefas com JS</title>
 </head>
 
 <body>
+    <h1>Minha lista de tarefas</h1>
     <form id="todo-form">
         <label for="title">Nova tarefa</label>
         <input id="title" name="title" required />
@@ -18,6 +20,9 @@
     </ul>
 
     <script src="script.js"></script>
+    <footer>
+<p>Todos os direitos reservados © 2025</p>
+</footer>
 </body>
 
 </html>
